--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "uuid": "^11.1.0",
     "xml-formatter": "^3.6.4"
   },
   "devDependencies": {
