--- a/package.json
+++ b/package.json
@@ -3,26 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "nodemon --exec next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "tailwind:init": "npx tailwindcss init -p"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.39.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.7",
-    "@mui/material": "^6.4.7",
-    "@mui/x-data-grid": "^7.27.3",
+    "@mui/icons-material": "^6.4.8",
+    "@mui/material": "^6.4.8",
+    "@mui/x-data-grid": "^7.28.0",
     "@pdf-lib/fontkit": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.6",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/supabase-js": "^2.49.1",
+    "blob-stream": "^0.1.3",
     "fast-xml-parser": "^5.0.9",
+    "fontkit": "^2.0.4",
+    "jspdf": "^3.0.1",
     "jszip": "^3.10.1",
     "next": "15.2.2",
     "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.16.0",
+    "pdfmake": "^0.2.18",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "uuid": "^11.1.0",
