--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,22 +1,9 @@
 
-[functions.backgroundAnalyze]
-enabled = true
-verify_jwt = true
-import_map = "./functions/backgroundAnalyze/deno.json"
-# Uncomment to specify a custom file path to the entrypoint.
-# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
-entrypoint = "./functions/backgroundAnalyze/index.ts"
-# Specifies static files to be bundled with the function. Supports glob patterns.
-# For example, if you want to serve static HTML pages in your function:
-# static_files = [ "./functions/backgroundAnalyze/*.html" ]
+[functions.queue-analyze]
+entrypoint = "./functions/queue-analyze/index.js"
 
-[functions.backgroundAnalyze]
-enabled = true
-verify_jwt = true
-import_map = "./functions/backgroundAnalyze/deno.json"
-# Uncomment to specify a custom file path to the entrypoint.
-# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
-entrypoint = "./functions/backgroundAnalyze/index.ts"
-# Specifies static files to be bundled with the function. Supports glob patterns.
-# For example, if you want to serve static HTML pages in your function:
-# static_files = [ "./functions/backgroundAnalyze/*.html" ]
+[functions.process-analyze]
+entrypoint = "./functions/process-analyze/index.js"
+
+[functions.check-status]
+entrypoint = "./functions/check-status/index.js"
