--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pdfkit": "^0.16.0",
     "pdfmake": "^0.2.18",
     "react": "^19.0.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
     "uuid": "^11.1.0",
     "xml-formatter": "^3.6.4"
