--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@anthropic-ai/sdk": "^0.39.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "@mui/x-data-grid": "^7.28.0",
