--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/supabase-js": "^2.49.1",
+    "@tanstack/react-table": "^8.21.3",
     "blob-stream": "^0.1.3",
     "fast-xml-parser": "^5.0.9",
     "fontkit": "^2.0.4",
@@ -35,6 +36,7 @@
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
+    "tanstack": "^1.0.3",
     "uuid": "^11.1.0",
     "xml-formatter": "^3.6.4"
   },
